--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "dependencies": {},
+  "dependencies": {
+    "body-parser": "^1.15.0",
+    "cors": "^2.7.1",
+    "express": "^4.13.4",
+    "mongodb": "^2.1.18",
+    "path": "^0.12.7"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,11 +23,5 @@
   "bugs": {
     "url": "https://github.com/emagrorrim/Xidian_Bank/issues"
   },
-  "homepage": "https://github.com/emagrorrim/Xidian_Bank#readme",
-  "dependencies": {
-    "body-parser": "^1.15.0",
-    "cors": "^2.7.1",
-    "express": "^4.13.4",
-    "path": "^0.12.7"
-  }
+  "homepage": "https://github.com/emagrorrim/Xidian_Bank#readme"
 }
